<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="UTANALYTICS_REMOTE_SERVICE_DELAY_SECOND">0</string>
    <string name="abandon_importing_system_playlist">Abandon importing system playlist?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_i18n_ad_no_data">Oops, this video is not here anymore. Take a break and come back later</string>
    <string name="ad_i18n_exit">Exit</string>
    <string name="adchannel_res">Adhost</string>
    <string name="adclient_res">AdClient</string>
    <string name="add_favorite_fail_toast">Added to favorite fail</string>
    <string name="add_favourite_tips"> songs added to favourite</string>
    <string name="add_playlist_already_exits">Already been added</string>
    <string name="add_playlist_fail">Add to playlist fail!  </string>
    <string name="add_playlist_success">Add to playlist success!  </string>
    <string name="add_playlist_tips"> songs added to  </string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="address_bar_input_bd">URL প্রদান করুন</string>
    <string name="address_bar_input_en_us">Enter URL</string>
    <string name="address_bar_input_es_la">Ingrese URL</string>
    <string name="address_bar_input_id">Masukkan URL</string>
    <string name="address_bar_input_pt_br">Digite o URL</string>
    <string name="address_bar_input_ru">Введите адрес</string>
    <string name="address_bar_input_vi">Nhập URL</string>
    <string name="address_bar_input_zh_cn">输入网址或扫一扫</string>
    <string name="address_bar_input_zh_tw">輸入網址</string>
    <string name="address_bar_search_en_us">Search</string>
    <string name="address_bar_search_es_la">Buscar</string>
    <string name="address_bar_search_id">Cari</string>
    <string name="address_bar_search_pt_br">Buscar</string>
    <string name="address_bar_search_ru">Поиск</string>
    <string name="address_bar_search_vi">Tìm</string>
    <string name="address_bar_search_zh_cn">搜索</string>
    <string name="address_bar_search_zh_tw">搜索</string>
    <string name="adhost_res">Adhost</string>
    <string name="card_bottom_info">IndiaNews 09 Feb 12:08</string>
    <string name="devconfig_ad_debug_settings">ad debug settings</string>
    <string name="devconfig_cd_params">cd params</string>
    <string name="devconfig_clear_data_and_install_new_uc">clear data and install new uc</string>
    <string name="devconfig_cms_env_customer">customize</string>
    <string name="devconfig_cms_env_global_customer">global customize</string>
    <string name="devconfig_cms_env_prea_india">india preA</string>
    <string name="devconfig_cms_env_prea_indonesia">indonesia prea</string>
    <string name="devconfig_cms_env_prec_india">india preC</string>
    <string name="devconfig_cms_env_release">cms release env</string>
    <string name="devconfig_cms_env_release_india">india</string>
    <string name="devconfig_cms_env_release_indonesia">indonesia</string>
    <string name="devconfig_cms_env_server">server test env</string>
    <string name="devconfig_cms_env_test">cms test env</string>
    <string name="devconfig_cms_env_test_india">india</string>
    <string name="devconfig_cms_env_test_indonesia">indonesia</string>
    <string name="devconfig_cms_env_test_muse">muse</string>
    <string name="devconfig_cms_env_test_prea_india">india testprea</string>
    <string name="devconfig_cms_env_test_preb_india">india testpreb</string>
    <string name="devconfig_cms_env_test_russia">russia</string>
    <string name="devconfig_cms_env_test_uiauto">uiautomator</string>
    <string name="devconfig_common">common</string>
    <string name="devconfig_config_ad">ad config</string>
    <string name="devconfig_config_ad_open_test_page">open test page</string>
    <string name="devconfig_configs">configs</string>
    <string name="devconfig_enable_cms_test_env_switch">cms v3 test env</string>
    <string name="devconfig_enable_devconfig_sp">enable develop setting</string>
    <string name="devconfig_enable_devconfig_sp_summary">please restart browser</string>
    <string name="devconfig_enable_filemanager_private_path">filemanager show private path(/data)</string>
    <string name="devconfig_enable_force_disable_ac">force disable AC model</string>
    <string name="devconfig_enable_force_disable_us_request">force disable us request</string>
    <string name="devconfig_enable_leak_monitor">enable leak monitor</string>
    <string name="devconfig_enable_power_log">enable power log</string>
    <string name="devconfig_enable_show_wa_log">enable float dialog of wa log</string>
    <string name="devconfig_enable_smooth_log">enable smooth log</string>
    <string name="devconfig_enable_spacex_devconfig">enable spacex ab develop env</string>
    <string name="devconfig_enable_spacex_devconfig_summary">switch spacex develop env and reload config data.</string>
    <string name="devconfig_enable_startup_benchmark">enable startup benchmark</string>
    <string name="devconfig_enable_traffic_log">enable traffic log</string>
    <string name="devconfig_enable_udrive_devconfig">enable udrive</string>
    <string name="devconfig_enable_upaas_test_env">upaas test env</string>
    <string name="devconfig_enable_url_overried_dialog">show url overried dialog</string>
    <string name="devconfig_enable_use_idcp_devconfig">enable force use idcp</string>
    <string name="devconfig_enable_vnet_devconfig">enable vnet</string>
    <string name="devconfig_enable_wa_log">enable wa log</string>
    <string name="devconfig_file_and_resource">file and rescoure manager</string>
    <string name="devconfig_iflow_ad_settings">infoflow ad settings</string>
    <string name="devconfig_iflow_server_ad_request_test_mode">iflow server ad test mode</string>
    <string name="devconfig_infoflow_config">infoflow config</string>
    <string name="devconfig_mock_ad_settings">ad test settings</string>
    <string name="devconfig_mock_sn">Mock Sn (For ABTest Group)</string>
    <string name="devconfig_restart">restart browser</string>
    <string name="devconfig_server_env">change server env</string>
    <string name="devconfig_server_env_delete_serveraddr">delete userdata/ServerAddr.ini</string>
    <string name="devconfig_server_env_load_serveraddr">load /sdcard/data/ServerAddr.ini</string>
    <string name="devconfig_server_env_write_serveraddr">write userdata/ServerAddr.ini</string>
    <string name="devconfig_setting_flags">setting flags</string>
    <string name="devconfig_setting_switch">setting switch</string>
    <string name="devconfig_switch_country">switch country</string>
    <string name="devconfig_switch_flow_env">switch flow env</string>
    <string name="devconfig_switch_india_news_env">switch india news</string>
    <string name="devconfig_switch_indonesia_news_env">switch indonesia news</string>
    <string name="devconfig_switch_news_language">switch news language</string>
    <string name="devconfig_udrive">UDrive Env</string>
    <string name="devconfig_udrive_online">生产环境（Online）</string>
    <string name="devconfig_udrive_pre">预发环境（Pre）</string>
    <string name="devconfig_udrive_test">日常环境（Test）</string>
    <string name="devconfig_unet_config">UNet</string>
    <string name="devconfig_unet_env_switch">UPaaS Env(reboot needed 0:prod 1:test 2:pre)</string>
    <string name="devconfig_unet_settings">UNet settings</string>
    <string name="devconfig_upload_logs">Upload logs</string>
    <string name="devconfig_us_data">us data</string>
    <string name="devconfig_us_env_release">us release env</string>
    <string name="devconfig_us_env_release_abbreviation">abbreviation</string>
    <string name="devconfig_us_env_release_bengal">bengal</string>
    <string name="devconfig_us_env_release_brazil">brazil</string>
    <string name="devconfig_us_env_release_genglish">general english</string>
    <string name="devconfig_us_env_release_india">india</string>
    <string name="devconfig_us_env_release_indonesia">indonesia</string>
    <string name="devconfig_us_env_release_malaysia">malaysia</string>
    <string name="devconfig_us_env_release_nigeria">nigeria</string>
    <string name="devconfig_us_env_release_pakistan">pakistan</string>
    <string name="devconfig_us_env_release_philippines">philippines</string>
    <string name="devconfig_us_env_release_russia">russia</string>
    <string name="devconfig_us_env_release_saudi_arabia">saudi_arabia</string>
    <string name="devconfig_us_env_release_singapore">singapore</string>
    <string name="devconfig_us_env_release_thailand">thailand</string>
    <string name="devconfig_us_env_release_vietnam">vietnam</string>
    <string name="devconfig_us_env_scan_qrcode">scan qrcode</string>
    <string name="devconfig_us_env_test">us test env</string>
    <string name="devconfig_us_env_test_bengal">bengal</string>
    <string name="devconfig_us_env_test_brazil">brazil</string>
    <string name="devconfig_us_env_test_genglish">general english</string>
    <string name="devconfig_us_env_test_india">india</string>
    <string name="devconfig_us_env_test_indonesia">indonesia</string>
    <string name="devconfig_us_env_test_pakistan">pakistan</string>
    <string name="devconfig_us_env_test_philippines">philippines</string>
    <string name="devconfig_us_env_test_russia">russia</string>
    <string name="devconfig_us_env_test_vietnam">vietnam</string>
    <string name="devconfig_version_info">version info</string>
    <string name="language_sample_card_title_en_us">Select your preferred language for news.</string>
    <string name="null_string" />
    <string name="secmtp_debug_ad_test_online">Online Test</string>
    <string name="secmtp_debug_basic_info">Basic Info</string>
    <string name="secmtp_debug_mediated_check_close">Integration Detection(Debug Mode is off)</string>
    <string name="secmtp_debug_sdk_setting">SDK Settings</string>
    <string name="secmtp_debug_version_compatible_tip">The current test tool is incompatible with the SDK version. To ensure compatibility and optimal performance, it is recommended to update the test tool to the latest version.</string>
</resources>