<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/devconfig_restart">
        <extra android:name="name" android:value="restart" />
    </PreferenceScreen>
    <PreferenceCategory android:title="@string/devconfig_udrive">
        <PreferenceScreen android:title="@string/devconfig_udrive_test">
            <extra android:name="name" android:value="devconfig_udrive_test" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_udrive_pre">
            <extra android:name="name" android:value="devconfig_udrive_pre" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_udrive_online">
            <extra android:name="name" android:value="devconfig_udrive_online" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devconfig_common">
        <PreferenceScreen android:title="@string/devconfig_switch_india_news_env">
            <extra android:name="name" android:value="switch_india_news" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_switch_indonesia_news_env">
            <extra android:name="name" android:value="switch_indonesia_news" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_switch_news_language">
            <extra android:name="name" android:value="switch_news_language" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_version_info">
            <extra android:name="name" android:value="version_info" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_upload_logs">
            <extra android:name="name" android:value="upload_logs" />
        </PreferenceScreen>
        <PreferenceScreen android:title="触发下载进程崩溃">
            <extra android:name="name" android:value="crash_download_service" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devconfig_switch_country">
        <PreferenceScreen android:title="@string/devconfig_us_env_release">
            <PreferenceScreen android:title="@string/devconfig_us_env_scan_qrcode">
                <extra android:name="name" android:value="us_env_scan_qrcode" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_genglish">
                <extra android:name="name" android:value="us_env_release_genglish" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_india">
                <extra android:name="name" android:value="us_env_release_india" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_indonesia">
                <extra android:name="name" android:value="us_env_release_indonesia" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_russia">
                <extra android:name="name" android:value="us_env_release_russia" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_vietnam">
                <extra android:name="name" android:value="us_env_release_vietnam" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_pakistan">
                <extra android:name="name" android:value="us_env_release_pakistan" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_bengal">
                <extra android:name="name" android:value="us_env_release_bengal" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_brazil">
                <extra android:name="name" android:value="us_env_release_brazil" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_philippines">
                <extra android:name="name" android:value="us_env_release_philippines" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_saudi_arabia">
                <extra android:name="name" android:value="us_env_release_saudi_arabia" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_abbreviation">
                <extra android:name="name" android:value="us_env_release_abbreviation" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_nigeria">
                <extra android:name="name" android:value="us_env_release_nigeria" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_singapore">
                <extra android:name="name" android:value="us_env_release_singapore" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_malaysia">
                <extra android:name="name" android:value="us_env_release_malaysia" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_release_thailand">
                <extra android:name="name" android:value="us_env_release_thailand" />
            </PreferenceScreen>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_us_env_test">
            <PreferenceScreen android:title="@string/devconfig_us_env_scan_qrcode">
                <extra android:name="name" android:value="us_env_scan_qrcode" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_genglish">
                <extra android:name="name" android:value="us_env_test_genglish" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_india">
                <extra android:name="name" android:value="us_env_test_india" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_indonesia">
                <extra android:name="name" android:value="us_env_test_indonesia" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_russia">
                <extra android:name="name" android:value="us_env_test_russia" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_vietnam">
                <extra android:name="name" android:value="us_env_test_vietnam" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_pakistan">
                <extra android:name="name" android:value="us_env_test_pakistan" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_bengal">
                <extra android:name="name" android:value="us_env_test_bengal" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_brazil">
                <extra android:name="name" android:value="us_env_test_brazil" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_us_env_test_philippines">
                <extra android:name="name" android:value="us_env_test_philippines" />
            </PreferenceScreen>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_server_env">
            <PreferenceScreen android:title="@string/devconfig_server_env_load_serveraddr" android:summary="@string/devconfig_enable_devconfig_sp_summary">
                <extra android:name="name" android:value="server_env_load_serveraddr" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_server_env_delete_serveraddr" android:summary="@string/devconfig_enable_devconfig_sp_summary">
                <extra android:name="name" android:value="server_env_delete_serveraddr" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_server_env_write_serveraddr" android:summary="@string/devconfig_enable_devconfig_sp_summary">
                <extra android:name="name" android:value="server_env_write_serveraddr" />
            </PreferenceScreen>
            <EditTextPreference android:title="dispatcher url" android:key="server_env_dispatcher_url" />
            <EditTextPreference android:title="proxy url" android:key="server_env_proxy_url" />
            <EditTextPreference android:title="foxy url" android:key="server_env_foxy_url" />
            <EditTextPreference android:title="stat url" android:key="server_env_stat_url" />
            <extra android:name="name" android:value="server_env" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devconfig_unet_config">
        <PreferenceScreen android:title="@string/devconfig_unet_settings">
            <extra android:name="name" android:value="unet_config" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_unet_env_switch">
            <extra android:name="name" android:value="GetUpaasTetEnv" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devconfig_config_ad">
        <PreferenceScreen android:title="@string/devconfig_config_ad_open_test_page">
            <extra android:name="name" android:value="ad_open_test_window" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devconfig_switch_flow_env">
        <PreferenceScreen android:title="@string/devconfig_cms_env_release">
            <PreferenceScreen android:title="@string/devconfig_cms_env_release_india">
                <extra android:name="name" android:value="india-online-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_release_indonesia">
                <extra android:name="name" android:value="indonesia-online-server" />
            </PreferenceScreen>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_cms_env_test">
            <PreferenceScreen android:title="@string/devconfig_cms_env_test_india">
                <extra android:name="name" android:value="india-test-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_test_indonesia">
                <extra android:name="name" android:value="indonesia-test-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_test_muse">
                <extra android:name="name" android:value="muses-test-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_test_russia">
                <extra android:name="name" android:value="russia-test-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_global_customer">
                <extra android:name="name" android:value="customer-global-test-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_test_uiauto">
                <extra android:name="name" android:value="uiauto-test-server" />
            </PreferenceScreen>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_cms_env_server">
            <PreferenceScreen android:title="@string/devconfig_cms_env_test_prea_india">
                <extra android:name="name" android:value="india-prea-test-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_test_preb_india">
                <extra android:name="name" android:value="india-preb-test-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_prea_india">
                <extra android:name="name" android:value="india-prepublish-dev-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_prec_india">
                <extra android:name="name" android:value="india-prec-dev-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_prea_indonesia">
                <extra android:name="name" android:value="indonesia-prepublish-dev-server" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_cms_env_customer">
                <extra android:name="name" android:value="customer-test-server" />
            </PreferenceScreen>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devconfig_configs">
        <PreferenceScreen android:title="@string/devconfig_infoflow_config">
            <extra android:name="name" android:value="infoflow_config" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_setting_flags">
            <extra android:name="name" android:value="setting_flags" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_cd_params">
            <extra android:name="name" android:value="cd_params" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_us_data">
            <extra android:name="name" android:value="us_data" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/devconfig_mock_sn">
            <extra android:name="name" android:value="mock_sn" />
        </PreferenceScreen>
        <PreferenceScreen android:title="全局UA配置">
            <extra android:name="name" android:value="video_check_config" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devconfig_file_and_resource">
        <PreferenceScreen android:title="@string/devconfig_clear_data_and_install_new_uc">
            <extra android:name="type" android:value="TYPE_CUSTOM_WINDOW" />
            <extra android:name="name" android:value="clear_data_and_install_new_uc" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/devconfig_setting_switch">
        <CheckBoxPreference android:title="@string/devconfig_enable_devconfig_sp" android:key="enable_devconfig_sp" android:summary="@string/devconfig_enable_devconfig_sp_summary" />
        <PreferenceScreen android:title="@string/devconfig_ad_debug_settings" android:dependency="enable_devconfig_sp">
            <PreferenceScreen android:title="@string/devconfig_mock_ad_settings">
                <extra android:name="name" android:value="ad_mock_settings" />
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/devconfig_iflow_ad_settings">
                <extra android:name="name" android:value="iflow_ad_settings" />
            </PreferenceScreen>
            <EditTextPreference android:title="@string/devconfig_iflow_server_ad_request_test_mode" android:key="iflow_server_ad_request_test_mode" android:defaultValue="0" />
        </PreferenceScreen>
        <CheckBoxPreference android:title="@string/devconfig_enable_vnet_devconfig" android:key="enable_vnet_dev" android:summary="@string/devconfig_enable_devconfig_sp_summary" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_udrive_devconfig" android:key="enable_udrive_dev" android:summary="@string/devconfig_enable_devconfig_sp_summary" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_use_idcp_devconfig" android:key="enable_force_use_idcp_dev" android:summary="@string/devconfig_enable_devconfig_sp_summary" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_spacex_devconfig" android:key="enable_spacex_dev" android:summary="@string/devconfig_enable_spacex_devconfig_summary" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_filemanager_private_path" android:key="enable_filemanager_private_path" android:summary="@string/devconfig_enable_devconfig_sp_summary" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_show_wa_log" android:key="enable_show_wa_log" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_wa_log" android:key="enable_wa_log" android:summary="cat /sdcard/Download/wa/* | grep KEY-WORD" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_smooth_log" android:key="enable_smooth_log" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_traffic_log" android:key="enable_traffic_log" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_power_log" android:key="enable_power_log" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_force_disable_us_request" android:key="enable_force_disable_us_request" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_leak_monitor" android:key="enable_leak_monitor" android:dependency="enable_devconfig_sp" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/devconfig_enable_startup_benchmark" android:key="enable_startup_benchmark" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_force_disable_ac" android:key="enable_force_disable_ac" android:summary="@string/devconfig_enable_devconfig_sp_summary" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_url_overried_dialog" android:key="enable_url_overried_dialog" android:summary="@string/devconfig_enable_devconfig_sp_summary" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_upaas_test_env" android:key="enable_upaas_test_env" android:dependency="enable_devconfig_sp" />
        <CheckBoxPreference android:title="@string/devconfig_enable_cms_test_env_switch" android:key="enable_cms_test_env_switch" android:dependency="enable_devconfig_sp" />
    </PreferenceCategory>
</PreferenceScreen>