<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/secmtp_debug_ll_root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.secmtp.sdk.debug.view.TitleBar android:id="@id/secmtp_debug_title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/secmtp_debug_sp_14" android:textColor="@android:color/holo_red_light" android:ellipsize="marquee" android:id="@id/secmtp_debug_tv_version_tip" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/secmtp_debug_dp_15" android:layout_marginTop="@dimen/secmtp_debug_dp_5" android:layout_marginRight="@dimen/secmtp_debug_dp_15" android:text="@string/secmtp_debug_version_compatible_tip" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
    <TextView android:id="@id/secmtp_debug_tv_basic_info" android:layout_marginTop="@dimen/secmtp_debug_dp_40" android:text="@string/secmtp_debug_basic_info" android:layout_marginStart="@dimen/secmtp_debug_dp_15" android:layout_marginEnd="@dimen/secmtp_debug_dp_15" style="@style/secmtp_debug_btn_style" />
    <TextView android:id="@id/secmtp_debug_tv_sdk_setting" android:layout_marginTop="@dimen/secmtp_debug_dp_30" android:text="@string/secmtp_debug_sdk_setting" android:layout_marginStart="@dimen/secmtp_debug_dp_15" android:layout_marginEnd="@dimen/secmtp_debug_dp_15" style="@style/secmtp_debug_btn_style" />
    <TextView android:id="@id/secmtp_debug_tv_mediated_check" android:paddingLeft="@dimen/secmtp_debug_dp_10" android:paddingRight="@dimen/secmtp_debug_dp_10" android:layout_marginTop="@dimen/secmtp_debug_dp_30" android:text="@string/secmtp_debug_mediated_check_close" android:layout_marginStart="@dimen/secmtp_debug_dp_15" android:layout_marginEnd="@dimen/secmtp_debug_dp_15" style="@style/secmtp_debug_btn_style" />
    <TextView android:id="@id/secmtp_debug_tv_ad_test_online" android:visibility="visible" android:layout_marginTop="@dimen/secmtp_debug_dp_30" android:text="@string/secmtp_debug_ad_test_online" android:layout_marginStart="@dimen/secmtp_debug_dp_15" android:layout_marginEnd="@dimen/secmtp_debug_dp_15" style="@style/secmtp_debug_btn_style" />
</LinearLayout>