<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/news_card" android:layout_width="fill_parent" android:layout_height="70.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:background="@drawable/language_left_corner" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:textSize="12.0dip" android:textColor="#ff404040" android:id="@id/card_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/language_sample_card_title_en_us" android:maxLines="2" />
        <TextView android:textSize="9.0dip" android:textColor="#7f404040" android:layout_gravity="bottom" android:id="@id/card_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_bottom_info" />
    </FrameLayout>
    <FrameLayout android:id="@id/card_icon_back" android:background="@drawable/language_card_right_corner" android:layout_width="92.0dip" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="bottom|center" android:id="@id/language_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:contentDescription="@string/null_string" />
    </FrameLayout>
</LinearLayout>